--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -12,7 +12,7 @@
       [(ngModel)]="newTask"
       (keyup.enter)="addTodo()"
     />
-    <button id="addBtn" (click)="addTodo()">Tambahkan Tugas</button>
+    <button id="addBtn" (click)="addTodo()">Tambahkan Tugas!</button>
   </div>
 
   <!-- Filter Buttons -->
